MET-3482: Create indexing properties object.